--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,59 @@
+/* abril-fatface-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.svg#AbrilFatface') format('svg'); /* Legacy iOS */
+}
+
+/* poppins-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+
+/* poppins-italic - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: italic;
+    font-weight: 400;
+    src: url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.eot'); /* IE9 Compat Modes */
+    src: url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.woff') format('woff'), /* Modern Browsers */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-italic.svg#Poppins') format('svg'); /* Legacy iOS */
+} 
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    min-height: 100vh;
+    overscroll-behavior-x: none;
+    overscroll-behavior-y: none;
+    cursor: default;
+    font-family: 'Abril Fatface', serif;
+}
+
 .home {
-    color: red;
+    display: flex;
+    flex-direction: column;
 }
