Adjust file loader configurations

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,3 +53,8 @@ body {
     font-family: 'Abril Fatface', serif;
 }
 
+.header {
+    background-color: #284D68;
+    color: #5dd597;
+    font-size: 50px;
+}
