--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* abril-fatface-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Abril Fatface';
@@ -12,7 +11,6 @@
          url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.svg#AbrilFatface') format('svg'); /* Legacy iOS */
 }
 
-/* poppins-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Poppins';
@@ -26,7 +24,6 @@
          url('./assets/fonts/poppins-v20-latin/poppins-v20-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 
-/* poppins-italic - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Poppins';
@@ -53,16 +50,52 @@ body {
     font-family: 'Abril Fatface', serif;
 }
 
+/* --- HOME --- */
+
+/* .home {} */
+
+/* .middle {} */
+
+.offerings {
+    display: flex;
+}
+
+
+/* --- HEADER --- */
+
 .header {
     background-color: #284D68;
     color: #5dd597;
     font-size: 50px;
 }
 
-.offerings {
-    display: flex;
-}
+/* .heading {} */
+
+/* h1 {} */
+
+/* h2 {} */
+
+/* .title {} */
+
+/* .images {} */
 
 .images > img {
     width: 100px;
 }
+
+/* .large-img {} */
+
+
+/* --- CLASSES --- */
+
+
+/* --- LESSONS --- */
+
+
+/* --- ABOUT --- */
+
+
+/* --- FOOTER --- */
+
+
+/* --- RESPONSIVE STYLES --- */
