--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,18 @@ body {
 
 /* .home {} */
 
+/* OLD: 
+.App {
+    display: flex;
+    flex-direction: column;
+}*/
+
 /* .middle {} */
+
+/* OLD:
+.middle {
+    display: flex;
+}*/
 
 .offerings {
     display: flex;
@@ -69,13 +80,52 @@ body {
     font-size: 50px;
 }
 
+/* OLD:
+.main {
+    background-color: #284D68;
+    color: #5dd597;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: -20px;
+}*/
+
 /* .heading {} */
 
+/* OLD: 
+.header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 500px;
+    margin-top: 70px;
+    width: 100vw;
+}
+
+.headings {
+    position: absolute;
+    left: 40vw;
+    top: -40px;
+}*/
+
 /* h1 {} */
+
+/* OLD: 
+h1 {
+    letter-spacing: 3px;
+}*/
 
 /* h2 {} */
 
 /* .title {} */
+
+/* OLD: 
+#headings-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 28px;
+}*/
 
 /* .images {} */
 
@@ -83,19 +133,185 @@ body {
     width: 100px;
 }
 
+/* OLD: 
+.images {
+    margin: 0 auto;
+}
+
+.images > img {
+    width: 200px;
+    height: 200px;
+    margin-right: 25px;
+}*/
+
 /* .large-img {} */
+
+/* OLD: 
+.images > .large-img {
+    height: 336px;
+}*/
 
 
 /* --- CLASSES --- */
 
+/* .classes */
+
+/* OLD: 
+.left {
+    background-color: #005a2c;
+    width: 50vw;
+    color: #F7F6F7;
+}*/
+
+/* OLD: 
+.left-header, .right-header {
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 50px;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+
+.left-content {
+    font-family: 'Poppins', sans-serif;
+    margin: 20px 20px 30px 40px;
+    font-size: 17px;
+}
+
+.left-content > p {
+    margin-bottom: 5px;
+    color: #b3ffd8;
+    font-size: 18px;
+}
+
+.left-content > ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 30px;
+}
+
+.left-content > .rate,
+.left-content > .link {
+    margin-top: 25px;
+}
+
+.left-content > .lesson-text-2 {
+    color: #b3ffd8;
+    font-size: 16px;
+}
+
+.left-content > .link,
+.left-content > .address  {
+    text-align: center;
+}
+
+.left-content > .link {
+    color: #75ffff;
+}
+
+#zoom {
+    margin-bottom: 25px;
+    margin-top: 25px;
+    text-align: center;
+    color: #F7F6F7;
+    font-size: 18px;
+}*/
+
+
 
 /* --- LESSONS --- */
+
+/* .lessons {} */
+
+/* OLD: 
+.right {
+    background-color: #F7F6F7;
+    width: 50vw;
+    color: #284D68;
+    font-size: 18px;
+}*/
+
+/* OLD: 
+REPEATED ABOVE: .left-header, .right-header {
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 50px;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+
+.contact {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact > .phone {
+    margin: 20px 20px 0px 20px;
+}
+
+.phone > a {
+    color: rgb(25, 25, 202);
+    text-decoration: none;
+}
+
+.contact > a {
+    display: inline-block;
+}
+
+.contact > a > img {
+    width: 40px;
+    height: 40px;
+}
+
+.credentials {
+    margin-top: 30px;
+    margin-left: 30px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.cred-list > li {
+    color: #005a2c;
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.sendoff-text {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
+    font-size: 17px;
+    margin: 40px 20px 0px;
+}*/
 
 
 /* --- ABOUT --- */
 
+/* .about {} */
+
 
 /* --- FOOTER --- */
+
+.footer {
+    
+}
+
+/* OLD: 
+.bottom {
+    background-color: #6A7D7E;
+    height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.5px;
+}
+
+.copyright > span {
+    font-size: 20px;
+}*/
 
 
 /* --- RESPONSIVE STYLES --- */
