--- a/src/styles.css
+++ b/src/styles.css
@@ -296,31 +296,14 @@ REPEATED ABOVE: .left-header, .right-header {
 /* --- FOOTER --- */
 
 .footer {
-    background-color: #6A7D7E;
-    height: 34px;
+    background-color: #9ba5a5;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 15px;
     letter-spacing: 0.5px;
 }
-
-.copyright > span {
-    font-size: 20px;
-}
-
-/* OLD: 
-.bottom {
-    background-color: #6A7D7E;
-    height: 34px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 0.5px;
-}
-
-.copyright > span {
-    font-size: 20px;
-}*/
 
 
 /* --- RESPONSIVE STYLES --- */
