--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,12 @@
     font-family: 'Abril Fatface';
     font-style: normal;
     font-weight: 400;
-    src: url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.eot'); /* IE9 Compat Modes */
-    src: url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('./assets/fonts/abril-fatface-v19-latin/abril-fatface-v19-latin-regular.svg#AbrilFatface') format('svg'); /* Legacy iOS */
+    src: url('.assets/fonts/abril-fatface-v23-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('.assets/fonts/abril-fatface-v23-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('.assets/fonts/abril-fatface-v23-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+         url('.assets/fonts/abril-fatface-v23-latin-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+         url('.assets/fonts/abril-fatface-v23-latin-regular.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+         url('.assets/fonts/abril-fatface-v23-latin-regular.svg#AbrilFatface') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
