Fix header class name

--- a/src/styles.css
+++ b/src/styles.css
@@ -113,7 +113,10 @@ h2 {
     color: #F7F6F7;
 }
 
-.lessons-header {}
+.lessons-header {
+    text-align: center;
+    color: blue;
+}
 
 /* .left-header, .right-header {
     text-align: center;
