--- a/src/styles.css
+++ b/src/styles.css
@@ -105,34 +105,42 @@ h2 {
 }
 
 
-/* --- LESSONS --- */
+/* --- LESSONS  & CLASSES --- */
+
+.lessons,
+.classes {
+    width: 50vw;
+    font-family: 'Poppins', sans-serif;
+}
 
 .lessons {
     background-color: #005a2c;
-    width: 50vw;
     color: #F7F6F7;
 }
 
-.lessons-header {
-    text-align: center;
-    color: blue;
+.classes {
+    background-color: #F7F6F7;
+    color: #284D68;
 }
 
-/* .left-header, .right-header {
+.lessons > *,
+.classes > * {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.lessons-header, .classes-header {
     text-align: center;
+    font-family: 'Abril Fatface', serif;
+    font-size: 48px;
     letter-spacing: 1px;
-    font-size: 50px;
     margin-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
-.left-content {
-    font-family: 'Poppins', sans-serif;
-    margin: 20px 20px 30px 40px;
-    font-size: 17px;
-}*/
-
-.lessons-intro {}
+.lessons-intro {
+    color: #b3ffd8;
+}
 
 .lessons-list {}
 
@@ -181,12 +189,6 @@ h2 {
 
 
 /* --- CLASSES --- */
-
-.classes {
-    background-color: #F7F6F7;
-    width: 50vw;
-    color: #284D68;
-}
 
 /* .right {
     //background-color: #F7F6F7;
