Finish link styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -177,12 +177,12 @@ li {
 .classes-list {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     color: #005a2c;
 }
 
 a:hover {
-    color: yellow;
+    color: #005a2c;
 }
 
 
