--- a/src/styles.css
+++ b/src/styles.css
@@ -184,6 +184,11 @@ li {
     color: #005a2c;
 }
 
+.classes-name {
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
 a {
     padding-left: 4px;
 }
@@ -371,8 +376,10 @@ a:hover {
 
     .heading {
         text-align: center;
-        left: 90px;
-        top: 10px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        top: 70px;
+        width: 100vw;
     }
 
     .images > img {
@@ -394,5 +401,130 @@ a:hover {
     }
 }
 
-/*
-*/
+@media (max-width: 450px) {
+    .header {
+        height: 300px;
+    }
+
+    .images > img {
+        width: 80px;
+        height: 80px;
+        margin-right: 5px;
+    }
+
+    .images > .large-img {
+        height: 134px;
+    }
+
+    .lessons-header, 
+    .classes-header,
+    .about-header {
+        padding-bottom: 26px;
+    }
+
+    .lessons > *,
+    .classes > *,
+    .about-credentials-description,
+    .about-contact {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .lessons-intro {
+        margin-bottom: 30px;
+    }
+
+    .lessons-list {
+        text-align: center;
+    }
+
+    .lessons > ul {
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 30px;
+        margin-left: 26vw;
+    }
+
+    .classes-description {
+        margin-bottom: 40px;
+    }
+
+    .classes-list {
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 350px) {
+    .header {
+        height: 280px;
+        font-size: 24px;
+    }
+
+    .images > img {
+        width: 70px;
+        height: 70px;
+        margin-right: 2px;
+    }
+
+    .images > .large-img {
+        height: 118px;
+    }
+
+    .lessons-header, 
+    .classes-header,
+    .about-header {
+        font-size: 32px;
+    }
+
+    .lessons > *,
+    .classes > *,
+    .about-credentials-description,
+    .about-contact {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 300px) {
+    .header {
+        height: 230px;
+        font-size: 20px;
+    }
+
+    .heading {
+        top: 50px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+    .images > img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .images > .large-img {
+        height: 101px;
+    }
+
+    .lessons,
+    .classes,
+    .about {
+        font-size: 13px;
+    }
+
+    .lessons-header, 
+    .classes-header,
+    .about-header {
+        font-size: 28px;
+    }
+
+    .lessons > ul {
+        margin-left: 16vw;
+        font-size: 13px;
+    }
+
+    .lessons-list {
+        font-size: 15px;
+    }
+}
