--- a/src/styles.css
+++ b/src/styles.css
@@ -173,7 +173,7 @@ li {
     margin-bottom: 35px;
 }
 
-.classes-description {
+/*.classes-description {
     margin-bottom: 20px;
 }
 
@@ -198,7 +198,7 @@ li {
 .classes-name {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
-}
+}*/
 
 a {
     padding-left: 4px;
