--- a/src/styles.css
+++ b/src/styles.css
@@ -173,6 +173,10 @@ li {
     margin-bottom: 35px;
 }
 
+.temp-content {
+    margin-bottom: 45px;
+}
+
 /*.classes-description {
     margin-bottom: 20px;
 }
