--- a/src/styles.css
+++ b/src/styles.css
@@ -455,6 +455,11 @@ a:hover {
         grid-column: span 2;
         justify-self: center;
     }
+
+    .classes-list > .classes-middle {
+        grid-column: span 2;
+        justify-self: center;
+    }
 }
 
 @media (max-width: 350px) {
